--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+    <script>
+      $(function(){
+          var style = '<link rel="stylesheet" href="../src/style/loader.css">';
+          $('head link:last').after(style);
+      });
+    </script>
   </body>
 </html>
