--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="「食事を与えて太らせる」人間育成型カロリー計算ツール"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/mercy.png" />
     <!--
