--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@hiroki_int">
     <meta property="og:url" content="https://masashi-calorie.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="ぼくまさし" />
