--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: https://ogp.me/ns#">
+  <head prefix="og:https://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,9 +16,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@hiroki_int">
-    <meta property="og:url" content="https://masashi-calorie.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@hiroki_int"/>
+    <!-- <meta property="og:url" content="https://masashi-calorie.vercel.app/" /> -->
+    <meta property="og:url" content="https://raw.githubusercontent.com/watnows/hackathon-2022-team2/ff2b6b9a515397b41b96d45ab4b66b819ddfa347/public/ogp_masashi.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="ぼくまさし" />
     <meta property="og:description" content="「食事を与えて太らせる」人間育成型カロリー計算ツールです。" />
